--- a/src/components/Pages/Home/Profiction/Profiction.module.css
+++ b/src/components/Pages/Home/Profiction/Profiction.module.css
@@ -1,3 +1,89 @@
 .bgSection{
     background-color: #f2f2f2;
 }
+ 
+
+.profictionContainer{
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 0 1rem;
+}
+
+.profictionContainer h1, .profictionContainer h3{
+    text-align: center;
+}
+
+.profictionContainer h1{
+    margin-bottom: 2.5rem;
+}
+
+.profictionContainer h3{
+    color: #00000090;
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+.cardsContainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+     padding: 4rem 0;
+}
+
+.card{
+    background-color: #fff;
+    box-shadow: 0 0 10px #ccc;
+    border-radius: 10px;
+    height: 100%;
+    display: flex;
+ }
+
+.cardHeader{
+    background-color: blueviolet;
+    padding: 1rem;
+    border-radius: 10px 0px 0 10px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.4rem;
+}
+
+.cardHeader h5{
+    font-size: 2rem;
+}
+
+.cardFooter{
+    padding: 1rem;
+ }
+ 
+
+.cardFooter p{
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.cardFooter h6{
+    font-size: 17px;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+
+.iconItem{
+ position: relative;
+  padding-left: 2rem;
+  margin-bottom: 1rem;
+  list-style: none;
+}
+
+.iconItem::before{
+content: "✓";
+  position: absolute;
+  left: 10px;
+  top: 0;
+  color: #4bb543; /* Verde de confirmação */
+  font-weight: bold;
+  font-size: 1.1rem;
+}
